--- a/hits/heerockbags/category.css
+++ b/hits/heerockbags/category.css
@@ -6,19 +6,19 @@ img{
     height: 350px;
 }
 .col-md-4{
-    padding-right: 0; 
-    padding-left: 0;
+    padding-right: 50px; 
+    padding-left: 0px;
 }
 
 .imageCategory{
     padding: 0;
     margin:0;
-    transform: skew(-15deg);
+    transform: skew(-10deg);
     transition: transform .2s;
 }
 .imageCategory:hover{
     
-    transform:scale(1.2) skew(-15deg);
+    transform:scale(1.2) skew(-10deg);
     z-index: 1;
     border: 0.5px solid;
     box-shadow: 0px 0px 5px 5px rgb(156, 156, 149);
@@ -27,7 +27,7 @@ img{
 .content{
 
     position: absolute; 
-    bottom: 100; 
+    bottom: 0px; 
     background: rgb(0, 0, 0);
     background: rgba(0, 0, 0, 0.5); /* Black see-through */
     color: #f1f1f1; 
@@ -40,7 +40,19 @@ img{
 }
 .imageCategory:hover .content{
     opacity: 1;
-    transition-duration: .5s;
-
+    transition-duration: 0.5s;
 }
+
+
+
+@media  (max-width: 999px) {
+
+     .content  {
+        
+        opacity: 1;
+        
+    
+    }
+
+  }
 
